--- a/src/Components/Card.css
+++ b/src/Components/Card.css
@@ -30,3 +30,16 @@
     text-align: center;
    }
 } */
+
+.featured {
+    border: 1px solid transparent!important;
+    font-size: .7rem;
+    font-weight: 600;
+    left: 2%;
+    top: 40%;
+}
+
+.card-body{
+    border-left: 0.4rem solid #ffce32;
+    
+}
