--- a/src/Components/Card.css
+++ b/src/Components/Card.css
@@ -35,8 +35,8 @@
     border: 1px solid transparent!important;
     font-size: .7rem;
     font-weight: 600;
-    left: 2%;
-    top: 40%;
+    left: .2rem;
+    top: 8rem;
 }
 
 .card-body{
