--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -18,7 +18,7 @@ body{
   min-width: 370px;
 }
 .form-control{
-  border: 2px solid black;
+  border: 2px solid black !important;
   padding: 11px!important;
   border-radius: 4px !important;
   
