--- a/src/Components/Card.css
+++ b/src/Components/Card.css
@@ -43,3 +43,14 @@
     border-left: 0.4rem solid #ffce32;
     
 }
+
+.card-width{
+    width: 14rem;
+}
+
+.custom{
+    display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;  
+  overflow: hidden;
+}
